--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.10",
     "@types/node": "^20.4.7",
     "@types/supertest": "^2.0.12",
     "eslint": "^8.46.0",
@@ -29,6 +31,10 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@aws-sdk/client-s3": "^3.450.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
