--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,16 @@
-  {
-    "compilerOptions": {
-      "module": "commonjs",
-      "esModuleInterop": true,
-      "allowSyntheticDefaultImports": true,
-      "target": "es6",
-      "strict": true,
-      "moduleResolution": "node",
-      "sourceMap": true,
-      "outDir": "dist",
-      "resolveJsonModule": true
-    },
-    "include": [
-      "src/**/*",
-      "test/**/*",
-    ]
-  }
+{
+  "compilerOptions": {
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "noImplicitAny": true,
+    "target": "ESNext",
+    "strict": true,
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "outDir": "dist",
+    "resolveJsonModule": true,
+    "baseUrl": "./"
+  },
+  "include": ["src/**/*", "test/**/*", "prisma/seed.ts"]
+}
