--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.16",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/morgan": "^1.9.9",
@@ -32,6 +33,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.450.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
